# urusai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_MODELS.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  streamlit_app.py
backend/: .env.example  alembic.ini  environment.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/scripts/: _db-common.ps1  _db-common.sh  db-clear.ps1  db-init.ps1  db-rebuild.ps1  db-start.ps1  db-start.sh  db-status.ps1  db-status.sh  db-stop.ps1  db-stop.sh  download_models.ps1  download_models.sh  kill.ps1  kill.sh  start.ps1  start.sh  urusai.bat  urusai.ps1  urusai.sh
backend/scripts/_lib/: common.ps1  common.sh
backend/scripts/db/: clear.ps1  init.ps1  rebuild.ps1  start.ps1  start.sh  status.ps1  status.sh  stop.ps1  stop.sh
backend/scripts/server/: start.ps1  start.sh  stop.ps1  stop.sh
backend/src/urusai/: __init__.py
backend/src/urusai/agent/: __init__.py  graph.py  state.py  stream.py  trace.py
backend/src/urusai/agent/nodes/: __init__.py  escalator.py  finalize.py  integrator.py  observer.py  retriever.py
backend/src/urusai/agent/prompts/: __init__.py  chat_persona.md  integrator_system.md  integrator_user.md
backend/src/urusai/api/: main.py  schemas.py
backend/src/urusai/api/routes/: __init__.py  healthz.py  ingests.py  interrupts.py  jobs.py  runs.py  system.py  threads.py  webhooks.py
backend/src/urusai/channels/: __init__.py  base.py  inventory_probe.py  registry.py  subtitle.py
backend/src/urusai/channels/asr/: __init__.py  faster_whisper.py
backend/src/urusai/channels/audio_event/: __init__.py
backend/src/urusai/channels/mss/: __init__.py
backend/src/urusai/config/: settings.py
backend/src/urusai/db/: __init__.py  models.py  retrieval.py  session.py
backend/src/urusai/domain/: evidence.py  inventory.py
backend/src/urusai/ingest/: __init__.py  executor.py  scheduler.py  streaming.py
backend/src/urusai/providers/: base.py  rotation.py  select.py
backend/src/urusai/rag/: __init__.py  embedder.py  reranker.py  retriever.py  writer.py
backend/src/urusai/scripts/: __init__.py  db.py
backend/tests/: test_smoke.py
backend/tests/db/: test_models.py
backend/tests/rag/: test_embedder.py  test_writer.py
docs/: README.md
(+57 files in other folders)
