[project]
name = "urusai"
version = "0.0.1"
description = "agent that watches videos and refuses to answer without grounded evidence"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "httpx",
    "google-genai>=2.0.0,<3",
    "openai",
    "anthropic",
    "groq",
    "dashscope",
    "langgraph>=1.2.0,<2",
    "langgraph-checkpoint-postgres>=3.1.0,<4",
    "psycopg-pool>=3.3.1",
    "langchain-core",
    "ffmpeg-python",
    "scenedetect",
    "yt-dlp",
    "soundfile",
    "faster-whisper",
    "audio-separator",
    "pyannote.audio>=3.1",
    "transformers>=4.40",
    "pysrt",
    "webvtt-py",
    "psycopg[binary]>=3.2",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pymilvus>=2.5.18,<2.6",
    "huggingface-hub",
]

[project.optional-dependencies]
ocr-local = ["pytesseract"]
dev = [
    "pytest>=7",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urusai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
